--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "antd": "^5.0.7",
     "apexcharts": "^3.36.3",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "5.3",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
     "typescript": "^4.9.4",
